--- a/Website 2021/Student/student_create_profile_css.css
+++ b/Website 2021/Student/student_create_profile_css.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* CSS DOCUMENT */
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #9B8249;
+  font-family: Times New Roman, Helvetica, sans-serif;
+  background-color: #7B68EE;
   margin: 0;
 }
 
@@ -34,13 +34,13 @@ body {
 }
 
 .title {
-  font-family: acumin-pro-semi-condensed, "Franklin Gothic", sans-serif;
+  font-family: acumin-pro-semi-condensed, "Times New Roman", sans-serif;
   font-size: 24px;
   margin: 0;
 }
 .title-main {
   font-weight: 600;
-  font-family: acumin-pro-semi-condensed, "Franklin Gothic", sans-serif;
+  font-family: acumin-pro-semi-condensed, "Times New Roman", sans-serif;
   font-size: 24px;
   margin: 0;
 }
