--- a/Website 2021/Student/student_login_css.css
+++ b/Website 2021/Student/student_login_css.css
@@ -5,13 +5,13 @@ body {
 	font-family: Times New Roman, Helvetica, sans-serif;
 	line-height: 1;
 	color: #FFFFFF;
-	background-image: linear-gradient(to bottom, #7B68EE, #7B68EE);
+	background-image: linear-gradient(to bottom, #87CEEB, #87CEEB);
 	text-align: center;
 	font: .75em LucidaGrande, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Geneva, Arial, Helvetica, Tahoma, sans-serif;
 }
 .login-container {
 	position: relative;
-    background: #3A3B3D;
+    background: #87CEEB;
     margin: 0 auto 55px auto;
     width: 400px;
     top: 85px;
@@ -40,7 +40,7 @@ label {
 .input {
 	width: 85%;
     height: 3vh;
-    background: #7B68EE;
+    background: #FFFFFF;
     font-weight: 600;
 }
 .input:focus {
