--- a/Website 2021/Student/student_create_profile_css.css
+++ b/Website 2021/Student/student_create_profile_css.css
@@ -2,7 +2,7 @@
 /* CSS DOCUMENT */
 body {
   font-family: Times New Roman, Helvetica, sans-serif;
-  background-color: #7B68EE;
+  background-color: #87CEEB;
   margin: 0;
 }
 
@@ -13,7 +13,7 @@ body {
   font-size: 35px;
   color: white;
   background: black;
-  font-style: italic;
+  font-style: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
