--- a/Website 2021/Student/student_create_profile_css.css
+++ b/Website 2021/Student/student_create_profile_css.css
@@ -52,7 +52,7 @@ body {
 h1 {
   background-color: black;
   color: white;
-  border: 5px solid black;
+  border: 5px solid grey;
   position: float;
   text-align: center;
   padding: 1%;
