--- a/Website 2021/Student/student_create_profile_css.css
+++ b/Website 2021/Student/student_create_profile_css.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS DOCUMENT */
 body {
-  font-family: Times New Roman, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #87CEEB;
   margin: 0;
 }
@@ -52,7 +52,7 @@ body {
 h1 {
   background-color: black;
   color: white;
-  border: 5px solid grey;
+  border: none;
   position: float;
   text-align: center;
   padding: 1%;
@@ -96,7 +96,7 @@ table.center {
 f1 {
 background-color: black;
   color: white;
-  border: 5px solid grey;
+  border: none;
   font-size: 10px;
   text-align: center;
   padding: 0.5%;
