--- a/Website 2021/Main/Group_css.css
+++ b/Website 2021/Main/Group_css.css
@@ -2,7 +2,7 @@
 /* CSS DOCUMENT */
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #9B8249;
+  background-color: #87CEEB;
   margin: 0;
 }
 
@@ -13,7 +13,7 @@ body {
   font-size: 35px;
   color: white;
   background: black;
-  font-style: italic;
+  font-style: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,13 +34,13 @@ body {
 }
 
 .title {
-  font-family: acumin-pro-semi-condensed, "Franklin Gothic", sans-serif;
+  font-family: acumin-pro-semi-condensed, "Times New Roman", sans-serif;
   font-size: 24px;
   margin: 0;
 }
 .title-main {
   font-weight: 600;
-  font-family: acumin-pro-semi-condensed, "Franklin Gothic", sans-serif;
+  font-family: acumin-pro-semi-condensed, "Times New Roman", sans-serif;
   font-size: 24px;
   margin: 0;
 }
@@ -52,7 +52,7 @@ body {
 h1 {
   background-color: black;
   color: white;
-  border: 5px solid grey;
+  border: none;
   position: float;
   text-align: center;
   padding: 1%;
@@ -91,4 +91,13 @@ table.center {
 		margin-left: auto; 
 		margin-right: auto;
 		table-layout: fixed;
-}   
+}    
+
+f1 {
+background-color: black;
+  color: white;
+  border: none;
+  font-size: 10px;
+  text-align: center;
+  padding: 0.5%;
+}
