--- a/Website 2021/Student/student_login_css.css
+++ b/Website 2021/Student/student_login_css.css
@@ -2,16 +2,16 @@
 /* CSS DOCUMENT */
 body {
 	height: 100vh;
-	font-family: Times New Roman, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1;
 	color: #FFFFFF;
-	background-image: linear-gradient(to bottom, #87CEEB, #87CEEB);
+	background-image: linear-gradient(to bottom, #BDAF94, #60553F);
 	text-align: center;
 	font: .75em LucidaGrande, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Geneva, Arial, Helvetica, Tahoma, sans-serif;
 }
 .login-container {
 	position: relative;
-    background: #000000;
+    background: #3A3B3D;
     margin: 0 auto 55px auto;
     width: 400px;
     top: 85px;
@@ -40,7 +40,7 @@ label {
 .input {
 	width: 85%;
     height: 3vh;
-    background: #FFFFFF;
+    background: #D5DBE5;
     font-weight: 600;
 }
 .input:focus {
